# jinja2-inflection

./: .coverage  .coverage-ratchet.json  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  QWEN.md  README.md  RULES.md  coverage.json  pyproject.toml
.oneiric_cache/: runtime_telemetry.json  workflow_checkpoints.sqlite
jinja2_inflection/: __init__.py
jinja2_inflection/.skylos/: cache.sqlite
tests/: test_init.py
