[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
output-format = "full"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "F821",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]
extend-select = [
    "I",
    "C901",
    "D",
]

[tool.ruff.lint.isort]
no-lines-before = [
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
target-version = [
    "py312",
]

[tool.creosote]
paths = [
    "jinja2_inflection",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "pdm-bump",
    "google-crc32c",
    "uv",
    "pre-commit",
    "pdm",
    "autotyping",
    "pytest-asyncio",
    "pyfiglet",
    "pyyaml",
    "pytest-cov",
    "pytest",
    "tomli-w",
    "pytest-mock",
]

[tool.refurb]
enable_all = true

[tool.bandit]
target = [
    "jinja2_inflection",
]
skips = [
    "B311",
    "B403",
    "B101",
    "B607",
    "B602",
    "B704",
    "B113",
    "B603",
    "B301",
    "B404",
]

[tool.pyright]
verboseOutput = true
include = [
    "jinja2_inflection",
]
exclude = [
    "scratch",
]
extraPaths = [
    ".venv/lib/python3.13/site-packages/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportInvalidTypeForm = false
reportUnknownLambdaType = false
reportUnknownParameterType = "warning"
reportPrivateUsage = "warning"
pythonVersion = "3.13"
pythonPlatform = "Darwin"

[tool.codespell]
skip = "*/data/*"
quiet-level = 3
ignore-words-list = "crate,uptodate"

[tool.pytest.ini_options]
addopts = "--cov=jinja2_inflection"
asyncio_default_fixture_loop_scope = "function"

[tool.vulture]
min_confidence = 86
paths = [
    "jinja2_inflection",
]
ignore_names = [
    "cls",
]

[project]
name = "jinja2-inflection"
version = "0.3.0"
description = ""
dependencies = [
    "inflection>=0.5.1",
    "jinja2>=3.1.6",
]
requires-python = ">=3.13"
readme = "README.md"
authors = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
]

[project.license]
text = "BSD-3-Clause"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "crackerjack>=0.13.0",
]
