[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
output-format = "full"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "F821",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
]
extend-select = [
    "I",
    "C901",
    "D",
]

[tool.ruff.lint.isort]
no-lines-before = [
    "first-party",
]

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
target-version = [
    "py312",
]

[tool.creosote]
paths = [
    "jinja2_inflection",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "pyyaml",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit",
    "tomli-w",
    "uv",
    "pdm",
    "pyfiglet",
    "google-crc32c",
    "pytest",
    "autotyping",
    "pytest-mock",
    "pytest-timeout",
    "pdm-bump",
]

[tool.refurb]
enable_all = true

[tool.bandit]
target = [
    "jinja2_inflection",
]
skips = [
    "B704",
    "B113",
    "B403",
    "B404",
    "B101",
    "B602",
    "B311",
    "B603",
    "B607",
    "B301",
]

[tool.pyright]
verboseOutput = true
include = [
    "jinja2_inflection",
]
exclude = [
    "scratch",
]
extraPaths = [
    ".venv/lib/python3.13/site-packages/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportInvalidTypeForm = false
reportUnknownLambdaType = false
reportUnknownParameterType = "warning"
reportPrivateUsage = false
pythonVersion = "3.13"
pythonPlatform = "Darwin"

[tool.codespell]
skip = "*/data/*"
quiet-level = 3
ignore-words-list = "crate,uptodate,nd"

[tool.pytest.ini_options]
addopts = "--cov=jinja2_inflection --cov-report=term"
asyncio_default_fixture_loop_scope = "function"
python_files = [
    "test_*.py",
    "*_test.py",
]
asyncio_mode = "auto"
testpaths = [
    "tests",
    "jinja2_inflection",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.vulture]
min_confidence = 86
paths = [
    "jinja2_inflection",
]
ignore_names = [
    "cls",
]

[tool.coverage.run]
branch = false
source = [
    "jinja2_inflection",
]
data_file = ".coverage"
parallel = false
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
    "*/test_*.py",
    "*/_test.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError",
    "def __str__",
    "@abstractmethod",
]
ignore_errors = false

[project]
name = "jinja2-inflection"
version = "0.4.0"
description = "A Jinja2 extension that integrates the inflection library's string transformation functions as template filters"
dependencies = [
    "inflection>=0.5.1",
    "jinja2>=3.1.6",
]
requires-python = ">=3.13"
readme = "README.md"
authors = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Filters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/lesleslie/jinja2-inflection"
Issues = "https://github.com/lesleslie/jinja2-inflection/issues"

[project.license]
text = "BSD-3-Clause"

[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "crackerjack>=0.18.4",
]
