[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "jinja2-inflection"
version = "0.6.3"
description = "A Jinja2 extension that integrates the inflection library's string transformation functions as template filters"
dependencies = [
    "inflection>=0.5.1",
    "jinja2>=3.1.6",
]
requires-python = ">=3.13"
readme = "README.md"
authors = [
    { name = "lesleslie", email = "les@wedgwoodwebworks.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Text Processing :: Filters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
]

[project.urls]
Homepage = "https://github.com/lesleslie/jinja2-inflection"
Issues = "https://github.com/lesleslie/jinja2-inflection/issues"

[project.license]
text = "BSD-3-Clause"

[dependency-groups]
dev = [
    "crackerjack>=0.38.10",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.ruff.lint]
extend-select = [
    "C901",
    "F",
    "I",
    "UP",
]
ignore = [
    "E402",
    "F821",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
testpaths = [
    "tests",
]
addopts = [
    "--cov=jinja2-inflection",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=json",
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (>2s)",
    "benchmark: Benchmark tests (deferred)",
]

[tool.coverage.run]
branch = true
parallel = true
concurrency = [
    "multiprocessing",
]
source = [
    "jinja2-inflection",
]
data_file = ".coverage"
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.bandit]
target = [
    "jinja2-inflection",
]
skips = [
    "B101",
    "B110",
    "B112",
    "B404",
    "B603",
    "B607",
]
exclude_dirs = [
    "tests/",
]

[tool.creosote]
paths = [
    "jinja2-inflection",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "hatchling",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-timeout",
    "ruff",
]
